--- a/build.gradle
+++ b/build.gradle
@@ -19,20 +19,33 @@ jar {
 
 repositories {
     mavenCentral()
+    dependencies {
+        // tag::jetty[]
+        compile("org.springframework.boot:spring-boot-starter-web") {
+            exclude module: "spring-boot-starter-tomcat"
+        }
+        compile("org.springframework.boot:spring-boot-starter-jetty")
+        // end::jetty[]
+
+        // tag::actuator[]
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        // end::actuator[]
+
+        testCompile("junit:junit")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+
+        compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+        compile("org.springframework.boot:spring-boot-devtools")
+
+        // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
+        compile(group: 'org.apache.commons', name: 'commons-collections4', version: '4.0')
+
+        // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+        compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.0')
+
+    }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-dependencies {
-    // tag::jetty[]
-    compile("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
-    }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
-    // end::jetty[]
-    // tag::actuator[]
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    // end::actuator[]
-    testCompile("junit:junit")
-}
